@@ -1,6 +1,10 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
- Changes on version 2.1.0 (current):
+ Changes on version 2.1.1 (current):
+- Pull request #41: Enable ppmd for plain text compress.
+  Thanks to 'enefry'.
+
+ Changes on version 2.1.0:
 - Pull request #40: Add crc functionality to public interface.
   Thanks to 'jakubvano'.
 - Pull request #39: Add direct NSData compression & decompression.
